fdo#61309: writerfilter: filter out enormous numbering levels

Change-Id: Iafef1c2ca2ca072bd604946fbe19b6a24e323512